name:                haskell-projecteuler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/my-project#readme
build-type:          Simple
cabal-version:       >=1.10

library
   hs-source-dirs:      src
   build-depends:       base
   default-language:    Haskell2010

test-suite haskell-projecteuler-tests
  type: exitcode-stdio-1.0
  main-is: MainSpec.hs
  hs-source-dirs: test, src
  default-language: Haskell2010
  build-depends: base
               , hspec